crates/test-ui/ui/thread_kind_traits_unimplementable.stderr
error[E0271]: type mismatch resolving `<Normal as ClassType>::ThreadKind == dyn MainThreadOnly`
 --> ui/thread_kind_traits_unimplementable.rs
  |
  | unsafe impl MainThreadOnly for Normal {}
  |                                ^^^^^^ expected trait `MainThreadOnly`, found trait `AnyThread`
  |
  = note: expected trait object `dyn MainThreadOnly`
             found trait object `(dyn AllocAnyThread + 'static)`
  = help: `(dyn AllocAnyThread + 'static)` implements `MainThreadOnly` so you could box the found value and coerce it to the trait object `Box<dyn MainThreadOnly>`, you will have to change the expected type as well
  = note: required for `Normal` to implement `objc2::top_level_traits::private::SealedMainThreadOnly`
note: required by a bound in `MainThreadOnly`
 --> $WORKSPACE/crates/objc2/src/top_level_traits.rs
  |
  | pub unsafe trait MainThreadOnly: private::SealedMainThreadOnly {
  |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `MainThreadOnly`
  = note: `MainThreadOnly` is a "sealed trait", because to implement it you also need to implement `objc2::top_level_traits::private::SealedMainThreadOnly`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
  = help: the following types implement the trait:
            objc2::runtime::ProtocolObject<P>
            T

error[E0271]: type mismatch resolving `<OnlyMain as ClassType>::ThreadKind == dyn AnyThread`
 --> ui/thread_kind_traits_unimplementable.rs
  |
  | unsafe impl AnyThread for OnlyMain {}
  |                           ^^^^^^^^ expected trait `AnyThread`, found trait `MainThreadOnly`
  |
  = note: expected trait object `dyn AllocAnyThread`
             found trait object `(dyn MainThreadOnly + 'static)`
  = help: `(dyn MainThreadOnly + 'static)` implements `AnyThread` so you could box the found value and coerce it to the trait object `Box<dyn AnyThread>`, you will have to change the expected type as well
  = note: required for `OnlyMain` to implement `objc2::top_level_traits::private::SealedAnyThread`
note: required by a bound in `AllocAnyThread`
 --> $WORKSPACE/crates/objc2/src/top_level_traits.rs
  |
  | pub unsafe trait AnyThread: private::SealedAnyThread {
  |                             ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AnyThread`
  = note: `AnyThread` is a "sealed trait", because to implement it you also need to implement `objc2::top_level_traits::private::SealedAnyThread`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
  = help: the following types implement the trait:
            objc2::runtime::ProtocolObject<P>
            T
